# Bid-Evaluator-GenAI

./: README.md
.devcontainer/: devcontainer.json
bid-evaluator/: .env  README.md  main.py  pyproject.toml
